--- a/src/app/projects/projects.html
+++ b/src/app/projects/projects.html
@@ -1,15 +1,13 @@
 <main class="flex-grow">
-  <section id="projects-content" class="py-12 md:py-20 bg-light-bg dark:bg-dark-bg">
+  <section id="projects-content" class="py-16 md:py-28 bg-white dark:bg-dark-bg transition-colors duration-300">
     <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-      <h2
-        class="text-3xl md:text-4xl font-heading font-bold text-center mb-10 md:mb-16 text-primary-DEFAULT dark:text-primary-DEFAULT">
-        My Projects</h2>
-
-      <div class="grid md:grid-cols-1 lg:grid-cols-2 gap-8 md:gap-12">
+    <h2 class="text-4xl md:text-5xl font-heading font-extrabold text-center mb-12 md:mb-20 text-primary-DEFAULT dark:text-white tracking-tight drop-shadow-lg">
+        My Projects
+      </h2>
+      <div class="grid md:grid-cols-1 lg:grid-cols-2 gap-10 md:gap-16">
         @for(project of projects; track project.title) {
-        <app-project-card [project]="project"></app-project-card>
+          <app-project-card [project]="project"></app-project-card>
         }
-
       </div>
     </div>
   </section>
