Update home page banner

--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -22,7 +22,7 @@
                     <p class="mb-4 text-base md:text-lg leading-relaxed">
                         As a Computer Science student deeply immersed in Machine Learning (ML) and Artificial
                         Intelligence (AI), I'm captivated not only by their potential in improving lives but also by the
-                        underlying magic – the intricate algorithms and innovative architectures that drive these
+                        underlying magic - the intricate algorithms and innovative architectures that drive these
                         powerful models. My experience spans diverse projects, from web development to the creation of
                         ML models for various applications. </p>
                     <p class="mb-4 text-base md:text-lg leading-relaxed">
@@ -57,7 +57,7 @@
                         <p class="text-md text-gray-700 dark:text-gray-400">University of London</p>
                         <p class="text-sm text-gray-500 dark:text-gray-500">2021-2025</p>
                         <p class="mt-1 text-sm text-light-text dark:text-dark-text">Relevant coursework: AI, Machine
-                            Learning, Data Structures, Algorithms.</p>
+                            Learning, Natural Language Processing, Intelligent Signal Processing</p>
                     </div>
                     <!-- Education Item 2: Placeholder -->
                     <div class="border-l-4 border-primary-DEFAULT pl-4">
@@ -66,6 +66,7 @@
                         <p class="text-md text-gray-700 dark:text-gray-400">Universidad de Los Andes, Mérida, Venezuela
                         </p>
                         <p class="text-sm text-gray-500 dark:text-gray-500">2023-Ongoing</p>
+                        <p class="mt-1 text-sm text-light-text dark:text-dark-text">Relevant coursework: Calculus, Physics, Probability & Statistics, Programming, Data Structures</p>
                     </div>
                     <!-- Add more education items as needed -->
                 </div>
@@ -103,18 +104,38 @@
                 <div class="space-y-4">
                     <!-- Certificate Item 1: Placeholder -->
                     <div class="border-l-4 border-primary-DEFAULT pl-4">
-                        <h4 class="text-lg font-semibold font-display text-light-text dark:text-white">Certificate
-                            Name (e.g., Machine Learning Specialization)</h4>
-                        <p class="text-sm text-gray-700 dark:text-gray-400">Issuing Organization (e.g., Coursera,
-                            Google)</p>
-                        <p class="text-xs text-gray-500 dark:text-gray-500">Date Issued / Credential ID (Optional)</p>
+                        <h4 class="text-lg font-semibold font-display text-light-text dark:text-white">Machine Learning in Production</h4>
+                        <p class="text-sm text-gray-700 dark:text-gray-400">DeepLearning.AI</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-500">June 2025</p>
                     </div>
-                    <!-- Certificate Item 2: Placeholder -->
+                    <!-- Certificate Item 1: Placeholder -->
                     <div class="border-l-4 border-primary-DEFAULT pl-4">
-                        <h4 class="text-lg font-semibold font-display text-light-text dark:text-white">Another
-                            Certificate (e.g., AWS Certified Cloud Practitioner)</h4>
-                        <p class="text-sm text-gray-700 dark:text-gray-400">Issuing Organization</p>
+                        <h4 class="text-lg font-semibold font-display text-light-text dark:text-white">Machine Learning Specialization</h4>
+                        <p class="text-sm text-gray-700 dark:text-gray-400">DeepLearning.AI</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-500">March 2024</p>
                     </div>
+
+                    <!-- Certificate Item 1: Placeholder -->
+                    <div class="border-l-4 border-primary-DEFAULT pl-4">
+                        <h4 class="text-lg font-semibold font-display text-light-text dark:text-white">Data Science Professional Certificate</h4>
+                        <p class="text-sm text-gray-700 dark:text-gray-400">IBM</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-500">September 2023</p>
+                    </div>
+
+                    <!-- Certificate Item 1: Placeholder -->
+                    <div class="border-l-4 border-primary-DEFAULT pl-4">
+                        <h4 class="text-lg font-semibold font-display text-light-text dark:text-white">Project Management Professional Certificate</h4>
+                        <p class="text-sm text-gray-700 dark:text-gray-400">Google</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-500">September 2022</p>
+                    </div>
+
+                    <!-- Certificate Item 1: Placeholder -->
+                    <div class="border-l-4 border-primary-DEFAULT pl-4">
+                        <h4 class="text-lg font-semibold font-display text-light-text dark:text-white">IT Support Professional Certificate</h4>
+                        <p class="text-sm text-gray-700 dark:text-gray-400">Google</p>
+                        <p class="text-xs text-gray-500 dark:text-gray-500">February 2022</p>
+                    </div>
+
                     <!-- Add more certificates as needed -->
                 </div>
             </div>
