--- a/src/app/project-card/project-card.html
+++ b/src/app/project-card/project-card.html
@@ -4,11 +4,14 @@
         <h3 class="text-2xl font-heading font-bold mb-4 text-primary-DEFAULT dark:text-white">{{ project.title }}</h3>
         <p class="text-base text-light-text dark:text-dark-text mb-4 leading-relaxed">{{ project.description }}</p>
                 <div class="mt-auto pt-4 flex gap-3">
-                        @if (project.projectUrl) {
+                        <!-- @if (project.projectUrl) {
                             <a [href]="project.projectUrl" target="_blank" rel="noopener noreferrer" class="modern-btn">
                                     <i class="fab fa-github mr-2"></i> View on GitHub
                             </a>
-                        }
+                        } -->
+                        <a [routerLink]="['/projects', project.id]" class="modern-btn">
+                                <i class="fas fa-info-circle mr-2"></i> More Details
+                        </a>
                 </div>
     </div>
 </div>
