--- a/src/app/projects/projects.html
+++ b/src/app/projects/projects.html
@@ -5,7 +5,7 @@
         My Projects
       </h2>
       <div class="grid md:grid-cols-1 lg:grid-cols-2 gap-10 md:gap-16">
-        @for(project of projects; track project.title) {
+        @for(project of projects; track project.id) {
           <app-project-card [project]="project"></app-project-card>
         }
       </div>
