--- a/src/app/project-details/project-details.html
+++ b/src/app/project-details/project-details.html
@@ -4,8 +4,10 @@
             <!-- Info Card -->
             <div
                 class="bg-white dark:bg-dark-card rounded-lg shadow-lg flex flex-col md:flex-row items-center gap-8 mb-12 overflow-hidden transition-colors duration-300">
-                <img [src]="project?.imageUrl" [alt]="project?.title"
-                    class="w-100 md:w-50 object-cover rounded-lg shadow-xl border border-gray-200 dark:border-gray-700" />
+                <div class="flex-shrink-0 w-full md:w-[36rem] aspect-[4/3] bg-gray-100 dark:bg-gray-800 flex items-center justify-center overflow-hidden rounded-lg shadow-xl border border-gray-200 dark:border-gray-700">
+                    <img [src]="project?.imageUrl" [alt]="project?.title"
+                        class="w-full h-full object-cover" />
+                </div>
                 <div class="flex-1 p-6">
                     <h1 class="text-3xl md:text-4xl font-heading font-bold mb-2 text-primary-DEFAULT dark:text-white">{{
                         project?.title }}</h1>
@@ -47,6 +49,18 @@
                 <div class="text-light-text dark:text-dark-text">
                     {{ project?.development }}</div>
             </section>
+
+            @if(project?.results){
+                <!-- Development Section -->
+            <section
+                class="mb-12 md:mb-16 p-6 bg-white dark:bg-dark-card rounded-lg shadow-lg transition-colors duration-300">
+                <h2 class="text-2xl md:text-3xl font-heading font-semibold mb-4 text-primary-DEFAULT dark:text-white">
+                    Results
+                </h2>
+                <div class="text-light-text dark:text-dark-text">
+                    {{ project?.results }}</div>
+            </section>
+            }
         </div>
     </section>
 </main>
