--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -9,7 +9,7 @@
             <div
                 class="flex flex-col md:flex-row items-center md:items-start gap-8 md:gap-12 mb-12 md:mb-16 p-6 bg-white dark:bg-dark-card rounded-lg shadow-lg transition-colors duration-300">
                 <div class="md:w-1/3 flex-shrink-0">
-                    <img src="myself.jpg" alt="Sebastian Ramirez"
+                    <img src="portrait.jpg" alt="Sebastian Ramirez"
                         class="rounded-lg shadow-xl w-full max-w-xs mx-auto md:max-w-sm h-auto object-cover aspect-square" />
                 </div>
                 <div class="md:w-2/3 text-light-text dark:text-dark-text">
