--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -3,7 +3,7 @@
     class="py-20 md:py-32 text-white text-center shadow-lg home-header-bg relative overflow-hidden">
     <div class="home-header-overlay absolute inset-0 z-0"></div>
     <div class="container mx-auto px-4 flex flex-col items-center justify-center relative z-10">
-      <img src="myself.jpg" alt="Profile Logo Sebastian Ramirez"
+      <img src="portrait.jpg" alt="Profile Logo Sebastian Ramirez"
         class="w-36 h-36 md:w-48 md:h-48 rounded-full mx-auto mb-8 border-4 border-white shadow-2xl object-cover">
       <h1 class="text-5xl md:text-6xl font-heading font-extrabold mb-4 tracking-tight drop-shadow-lg">
         Sebastian Ramirez
@@ -26,8 +26,8 @@
     <h2 class="text-4xl md:text-5xl font-heading font-extrabold text-left md:text-center mb-10 md:mb-14 text-primary-DEFAULT dark:text-white tracking-tight drop-shadow-lg border-b-4 border-primary-DEFAULT inline-block md:w-auto px-2 pb-2">About Me</h2>
       <div class="flex flex-col md:flex-row items-center md:items-start gap-10 md:gap-16">
         <div class="md:w-1/3 flex-shrink-0 flex justify-center">
-          <img src="myself.jpg" alt="Sebastian Ramirez"
-            class="shadow-2xl w-56 h-56 md:w-72 md:h-72 object-cover border-4 border-primary-DEFAULT">
+          <img src="working.png" alt="Sebastian Ramirez"
+            class="shadow-2xl w-100 h-100 md:w-100 md:h-72 object-cover border-4 border-primary-DEFAULT">
         </div>
         <div class="md:w-2/3 text-light-text dark:text-dark-text text-lg md:text-xl leading-relaxed">
           <p class="mb-6">A Computer Science student with a complementary background in Systems Engineering, passionate about leveraging technology to solve complex problems.</p>
