Minor changes in UI

--- a/src/app/project-details/project-details.html
+++ b/src/app/project-details/project-details.html
@@ -24,7 +24,7 @@
                     <p class="text-base text-light-text dark:text-dark-text mb-4 leading-relaxed">{{ project?.description
                         }}</p>
                     <a *ngIf="project?.projectUrl" [href]="project?.projectUrl" target="_blank" rel="noopener"
-                        class="modern-btn mt-2">
+                        class="modern-btn">
                         <i class="fab fa-github mr-2"></i> View Project on GitHub
                     </a>
                 </div>
