--- a/src/app/app.html
+++ b/src/app/app.html
@@ -50,9 +50,9 @@
         I'm always open to discussing new projects, creative ideas, or opportunities to be part of something amazing. Feel free to reach out!
       </p>
       <div class="flex flex-col sm:flex-row justify-center items-center gap-6">
-  <a href="mailto:sebastian.ramirez.dev@example.com" class="modern-btn">
+  <!-- <a href="mailto:sebastian.ramirez.dev@example.com" class="modern-btn">
           <i class="fas fa-envelope mr-2"></i> Send Email
-        </a>
+        </a> -->
   <a href="https://www.linkedin.com/in/sebastianramirezdev/" target="_blank" rel="noopener noreferrer" class="modern-btn">
           <i class="fab fa-linkedin mr-2"></i> Connect on LinkedIn
         </a>
@@ -73,7 +73,7 @@
       </a>
     </div>
     <p class="text-base font-semibold text-white dark:text-gray-100">
-      &copy; <span id="currentYear"></span> © 2024 Sebastián Ramírez. All rights reserved.
+      &copy; <span id="currentYear"></span> 2025 Sebastián Ramírez. All rights reserved.
     </p>
     <p class="text-xs mt-2 text-gray-300 dark:text-gray-300">
       Built with HTML, Tailwind CSS & Angular.
