--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -3,7 +3,7 @@
     class="py-20 md:py-32 text-white text-center shadow-lg home-header-bg relative overflow-hidden">
     <div class="home-header-overlay absolute inset-0 z-0"></div>
     <div class="container mx-auto px-4 flex flex-col items-center justify-center relative z-10">
-      <img src="portrait.jpg" alt="Profile Logo Sebastian Ramirez"
+      <img src="logo-primary.png" alt="Profile Logo Sebastian Ramirez"
         class="w-36 h-36 md:w-48 md:h-48 rounded-full mx-auto mb-8 border-4 border-white shadow-2xl object-cover">
       <h1 class="text-5xl md:text-6xl font-heading font-extrabold mb-4 tracking-tight drop-shadow-lg">
         Sebastián Ramírez
